# asreview_dashboard

./: app.py  pyproject.toml
data/: asreview_papers.csv
scripts/: analyze.py
