[project]
name = "asreview-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Stefano Rapisarda",email = "s.rapisarda86@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.44.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "asreview_dashboard", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
